fix contact overflow

--- a/css/theme.css
+++ b/css/theme.css
@@ -96,6 +96,8 @@
   --spacing-indent: 1.5ch;
   --spacing-navbar-height: var(--space-navbar-height);
   --spacing-dvh--navbar: calc(100dvh - var(--space-navbar-height));
+  --spacing-cqi: 100cqi;
+  --spacing-inherit: inherit;
 
   /* Aspect ratio ---------------------------------------------------------------------------------------------------------------------- */
 
